--- a/Contacto.html
+++ b/Contacto.html
@@ -17,7 +17,7 @@
 		     
 		      <a href="#" data-target="mobile-demo" class="sidenav-trigger v"><i class="material-icons">menu</i></a>
 		      <ul class="right hide-on-med-and-down">
-		         <li><a href="index.html">Perfil</a></li>
+		        <li><a href="index.html">Perfil</a></li>
 		        <li><a href="Formacion.html">Formacion</a></li>
 		        <li><a href="hab.html">Habilidades</a></li>
 		        <li><a href="Contacto.html">Contacto</a></li>
@@ -32,86 +32,44 @@
 		    <li class="oa"><a href="Contacto.html" class="op">Contacto</a></li>
 		  </ul>
 	</header>
+<br>
+<br>
+<br>
+<br>
+<br>
+	<main>
+	  <div class="container">
+	  <h1>Contacto</h1>
+	    <div class="row">
+	      <div class="col m6">
+	        <form action="back/mensaje.php" method="post">
+	          <div class="row">
+	            <div class="input-field col s6">
+	              <i class="material-icons prefix">account_circle</i>
+	              <input id="icon_prefix" type="text" class="validate" name="nombre" required>
+	              <label for="icon_prefix">Nombre</label>
+	            </div>
+	            <div class="input-field col s6">
+	              <i class="material-icons prefix">mail</i>
+	              <input id="email" type="email" class="validate" name="correo" required>
+	              <label for="email" data-error="Correo no valido" data-success="Correo valido">Email</label>
+	            </div>
+	          </div>
+	          <h6>Mensaje</h6>
+	          <div class="input-field col s12">
+	            <textarea name="mensaje" id="textarea1" class="materialize-textarea"></textarea>
+	            <label for="textarea1" required>Textarea</label>
+	          </div>
+	          <input type="submit" value="Enviar" class="btn black right">
+	        </form>
+	      </div>
+	      <div class="col m6">
+	        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3758.8338493192327!2d-99.00657225014622!3d19.59161294059001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2smx!4v1541702021438" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+	      </div>
+	    </div>
 
-	<div class="container or">
-		<div class="row encabezado">
-			<img src="img/pancarta.png" alt="cartel" class="enca">
-		</div>
-
-		<div class="row">
-			<div class="col m4">
-				<div class="row">
-					<img src="img/Fotografia-Curriculum-21.jpg" alt="img" class="imagea">
-					<p id="name">
-						Luis Javier Montiel Martinez	
-					</p>
-				</div>
-
-			</div>
-
-			<div class="col m4">
-				<div id="frase">
-					Nunca te rindas, porque estas en el lugar y momento en el que la marea dará la vuelta
-				</div>
-				<p id="desc">
-					Soy una persona muy proactiva, tengo un gran sentido de responsabilidd en las funciones que se me asignan, soy muy receptivo para las ideas y sugerencias, me gusta analizar objetivamente las situaciones que se presentan en mi vida profecional y dar las solciones inmediatas.
-
-				</p>
-
-				<p id="fi">
-					<img src="img/firma-superior.png" id="firma">
-				</p>
-
-			</div>
-
-			<div class="col m4">
-				<p><div class="campo"><span class=" icon icon-calendar"></span>Fecha nacimiento</div> 24 de septiembre de 1998</p>
-				<p><div class="campo"><span class="icon icon-user"></span>Edad</div> 20 años</p>
-				<p><div class="campo"><span class="icon icon-phone"></span>Telefono</div> 55-74-66-14-60</p>
-				<p><div class="campo"><span class="icon icon-home"></span>Direccion</div> Bosque de framboyanes no. 12 col.jardines de Morelos, ecatepec, edo. de Mex</p>
-				<p><div class="campo"><span class="icon icon-location2"></span>Codigo Postal</div>55070</p>
-				<div class="row espa">
-					<div class="col m12">
-						<div class="col m6">
-						<div class="car hab">
-							<img src="img/30801.png" alt="" class="icar">
-							<br>
-							Trabajo bajo presion
-						</div>
-						</div>
-						<div class="col m6">
-							<div class="car hab">
-								<img src="img/408557.png" alt="" class="icar">
-								<br>
-								Proyectos realizados
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="col m12">
-						<div class="col m6">
-						<div class="car hab res">
-							<img src="img/icono-3-no.png" alt="" class="icar">
-							<br>
-							Alta competitividad
-						</div>
-						</div>
-						<div class="col m6">
-							<div class="car hab">
-								<img src="img/680221.png" alt="" class="icar">
-								<br>
-								<br>Gran experiencia <br>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-
-		</div>
-
-	</div>
+	  </div>
+	</main>
 
 		<footer class="page-footer nav_bar">
 		          <div class="container">
