--- a/Contacto.html
+++ b/Contacto.html
@@ -12,7 +12,7 @@
 <body>
 	<header>
 		
-		<nav>
+		<nav class="enfrente">
 		    <div class="nav-wrapper nav_bar">
 		     
 		      <a href="#" data-target="mobile-demo" class="sidenav-trigger v"><i class="material-icons">menu</i></a>
