--- a/Formacion.html
+++ b/Formacion.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="css/fonts.css">
 	<link rel="stylesheet" href="css/style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<title>Materialize</title>
+	<title>Formacion</title>
 </head>
 <body>
 	<header>
