--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" href="css/fonts.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<title>Materialize</title>
+	<title>Mi perfil</title>
 </head>
 <body>
 	<header>
